[gd_scene load_steps=14 format=2]

[ext_resource path="res://games/celda_escape/game_data.tres" type="Resource" id=1]
[ext_resource path="res://tools/ui_tools/label.gd" type="Script" id=2]
[ext_resource path="res://apps/room_tester/room_tester.gd" type="Script" id=3]
[ext_resource path="res://clients/default_client/default_client.tres" type="Resource" id=4]
[ext_resource path="res://apps/room_tester/pointfree.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://apps/room_tester/pixel_intv.otf" type="DynamicFontData" id=6]
[ext_resource path="res://apps/room_tester/object_list.tscn" type="PackedScene" id=7]
[ext_resource path="res://apps/room_tester/rounded_rect.png" type="Texture" id=8]
[ext_resource path="res://tools/grog/compile/compiler.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 5 )

[node name="room_tester" type="Node"]
script = ExtResource( 3 )
displays = [ ExtResource( 4 ) ]
game_to_load = ExtResource( 1 )
ui_path = NodePath("ui_layer/ui")
game_name_label_path = NodePath("ui_layer/ui/game_name")
display_list_path = NodePath("ui_layer/ui/test_rooms/lists/display_list_column/list_border/list")
start_list_path = NodePath("ui_layer/ui/test_rooms/lists/start_list_column/list_border/list")
actor_list_path = NodePath("ui_layer/ui/test_rooms/lists/actor_list_column/list_border/list")

[node name="ui_layer" type="CanvasLayer" parent="."]
layer = 2

[node name="ui" type="Control" parent="ui_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="ui_layer/ui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.458824, 0.47451, 0.427451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_name" type="Label" parent="ui_layer/ui"]
anchor_left = 0.5
anchor_top = 0.002
anchor_right = 0.5
anchor_bottom = 0.002
margin_left = -828.0
margin_top = 0.84
margin_right = 832.0
margin_bottom = 133.84
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.87, 0.9, 0.81, 1 )
text = "(game name)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_rooms" type="NinePatchRect" parent="ui_layer/ui"]
self_modulate = Color( 0, 0, 0, 0.352941 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 136.0
margin_right = -719.0
margin_bottom = -215.0
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lists" type="HBoxContainer" parent="ui_layer/ui/test_rooms"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="room_list_column" type="Control" parent="ui_layer/ui/test_rooms/lists"]
visible = false
margin_right = 212.0
margin_bottom = 709.0
size_flags_horizontal = 3

[node name="list_border" type="NinePatchRect" parent="ui_layer/ui/test_rooms/lists/room_list_column"]
self_modulate = Color( 0, 0, 0, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -150.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" parent="ui_layer/ui/test_rooms/lists/room_list_column/list_border" instance=ExtResource( 7 )]

[node name="header" parent="ui_layer/ui/test_rooms/lists/room_list_column/list_border/list/elements" index="0"]
margin_right = 152.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/room_list_column/list_border/list/elements/header" index="0"]
text = "RT_ROOMS"

[node name="display_list_column" type="Control" parent="ui_layer/ui/test_rooms/lists"]
margin_right = 381.0
margin_bottom = 729.0
size_flags_horizontal = 3

[node name="list_border" type="NinePatchRect" parent="ui_layer/ui/test_rooms/lists/display_list_column"]
self_modulate = Color( 0, 0, 0, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" parent="ui_layer/ui/test_rooms/lists/display_list_column/list_border" instance=ExtResource( 7 )]

[node name="header" parent="ui_layer/ui/test_rooms/lists/display_list_column/list_border/list/elements" index="0"]
margin_right = 311.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/display_list_column/list_border/list/elements/header" index="0"]
text = "RT_DISPLAYS"

[node name="start_list_column" type="Control" parent="ui_layer/ui/test_rooms/lists"]
margin_left = 385.0
margin_right = 766.0
margin_bottom = 729.0
size_flags_horizontal = 3

[node name="list_border" type="NinePatchRect" parent="ui_layer/ui/test_rooms/lists/start_list_column"]
self_modulate = Color( 0, 0, 0, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" parent="ui_layer/ui/test_rooms/lists/start_list_column/list_border" instance=ExtResource( 7 )]

[node name="header" parent="ui_layer/ui/test_rooms/lists/start_list_column/list_border/list/elements" index="0"]
margin_right = 321.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/start_list_column/list_border/list/elements/header" index="0"]
text = "RT_STARTS"

[node name="actor_list_column" type="Control" parent="ui_layer/ui/test_rooms/lists"]
margin_left = 770.0
margin_right = 1151.0
margin_bottom = 729.0
size_flags_horizontal = 3

[node name="list_border" type="NinePatchRect" parent="ui_layer/ui/test_rooms/lists/actor_list_column"]
self_modulate = Color( 0, 0, 0, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" parent="ui_layer/ui/test_rooms/lists/actor_list_column/list_border" instance=ExtResource( 7 )]

[node name="header" parent="ui_layer/ui/test_rooms/lists/actor_list_column/list_border/list/elements" index="0"]
margin_right = 311.0

[node name="Label" parent="ui_layer/ui/test_rooms/lists/actor_list_column/list_border/list/elements/header" index="0"]
text = "RT_ACTORS"

[node name="test_room_button" type="Button" parent="ui_layer/ui/test_rooms"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = -19.0
text = "RT_TEST_ROOM"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_scripts" type="NinePatchRect" parent="ui_layer/ui"]
visible = false
self_modulate = Color( 0, 0, 0, 0.352941 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="script_list_column" type="Control" parent="ui_layer/ui/test_scripts"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_bottom = -150.0

[node name="list_border" type="NinePatchRect" parent="ui_layer/ui/test_scripts/script_list_column"]
self_modulate = Color( 0, 0, 0, 0.231373 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" parent="ui_layer/ui/test_scripts/script_list_column/list_border" instance=ExtResource( 7 )]

[node name="test_raw" type="NinePatchRect" parent="ui_layer/ui/test_scripts"]
self_modulate = Color( 0.376471, 0.360784, 0.431373, 0 )
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -150.0
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="NinePatchRect" parent="ui_layer/ui/test_scripts/test_raw"]
self_modulate = Color( 0.172549, 0.164706, 0.196078, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="raw_script" type="TextEdit" parent="ui_layer/ui/test_scripts/test_raw/border"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 4 )
text = "# grog script

:start

.say \"Hello, world!\"

.end

#.load_room room_name
#.load_actor actor_name
#.load_actor actor_name at=pos
#.enable_input
#.disable_input

#.wait 2
#.wait 2 skippable=false

#actor_name.say \"Dialog\"
#actor_name.say \"Dialog\" duration=0.5
#actor_name.say \"Dialog\" duration=2 skippable=false
#actor_name.walk to=pos
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="test_script_button" type="Button" parent="ui_layer/ui/test_scripts"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -173.209
margin_top = -105.862
margin_right = 164.791
margin_bottom = -38.8618
text = "RT_TEST_SCRIPT"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_game_button" type="Button" parent="ui_layer/ui"]
margin_left = 1282.8
margin_top = 195.105
margin_right = 1818.8
margin_bottom = 479.105
text = "RT_PLAY_GAME"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="ui_layer/ui"]
margin_left = 1330.32
margin_top = 601.175
margin_right = 1782.32
margin_bottom = 816.175
text = "RT_QUIT"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grog_compiler" type="Node" parent="."]
script = ExtResource( 9 )
[connection signal="pressed" from="ui_layer/ui/test_rooms/test_room_button" to="." method="_on_test_room_button_pressed"]
[connection signal="pressed" from="ui_layer/ui/test_scripts/test_script_button" to="." method="_on_test_script_button_pressed"]
[connection signal="pressed" from="ui_layer/ui/play_game_button" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="ui_layer/ui/quit_button" to="." method="_on_quit_button_pressed"]

[editable path="ui_layer/ui/test_rooms/lists/room_list_column/list_border/list"]

[editable path="ui_layer/ui/test_rooms/lists/display_list_column/list_border/list"]

[editable path="ui_layer/ui/test_rooms/lists/start_list_column/list_border/list"]

[editable path="ui_layer/ui/test_rooms/lists/actor_list_column/list_border/list"]
